Implemented the header

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
         <meta name="name" content="Marvin | Improve your productivity">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet"> 
         <title>Marvin | Improve your productivity</title>
         <script src="./vendor/custom-elements-es5-adapter.js"></script>
     </head>
