--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet"> 
         <title>Marvin | Improve your productivity</title>
-        <script defer src="./vendor/polyfill.min.js"></script>
-        <script defer src="./vendor/custom-elements-es5-adapter.js"></script>
-        <script defer src="./vendor/webcomponents-loader.js"></script>
+        <script src="./vendor/polyfill.min.js"></script>
+        <script src="./vendor/custom-elements-es5-adapter.js"></script>
+        <script src="./vendor/webcomponents-loader.js"></script>
     </head>
     <body>
         <page-root></page-root>
